# SeeDataStructure

./: .gitignore  .qmake.stash  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  SeeDataStructure.pro  SeeDataStructure.pro.user.0a70565  SeeDataStructure.pro.user.22  SeeDataStructureRc.qrc  SeerAboutDialog.cpp  SeerAboutDialog.ui  SeerArgumentsDialog.ui  SeerSlashProcDialog.ui  keysettings.cpp  keysettings.h  main.cpp  object_script.SeeDataStructure.Debug  object_script.SeeDataStructure.Release  sdsmainwindow.cpp  sdsmainwindow.h  sdsmainwindow.ui  ui_LogWidget.h  ui_QProcessInfoWidget.h  ui_SeerAboutDialog.h  ui_SeerArgumentsDialog.h  ui_SeerArrayVisualizerWidget.h  ui_SeerBreakpointCreateDialog.h  ui_SeerBreakpointsBrowserWidget.h  ui_SeerBreakpointsOptionsBarWidget.h  ui_SeerCatchpointCreateDialog.h  ui_SeerCatchpointsBrowserWidget.h  ui_SeerCloseSourceDialog.h  ui_SeerConfigDialog.h  ui_SeerDebugDialog.h  ui_SeerEditorConfigPage.h  ui_SeerEditorManagerWidget.h  ui_SeerEditorOptionsBarWidget.h  ui_SeerEditorWidget.h  ui_SeerFunctionBrowserWidget.h  (+32 more)
BaseDebug/: LogWidget.cpp  LogWidget.h  LogWidget.ui  SeerBreakpointCreateDialog.ui  SeerBreakpointsBrowserWidget.cpp  SeerBreakpointsBrowserWidget.ui  SeerBreakpointsOptionsBarWidget.ui  SeerCatchpointCreateDialog.ui  SeerCatchpointsBrowserWidget.cpp  SeerCatchpointsBrowserWidget.ui  SeerDebugDialog.cpp  SeerDebugDialog.ui  SeerFunctionBrowserWidget.cpp  SeerFunctionBrowserWidget.ui  SeerLibraryBrowserWidget.cpp  SeerLibraryBrowserWidget.ui  SeerSourceBrowserWidget.cpp  SeerSourceBrowserWidget.ui  SeerSourceLibraryManagerWidget.cpp  SeerSourceLibraryManagerWidget.ui  SeerTildeLogWidget.cpp  SeerTildeLogWidget.h  SeerWatchpointsBrowserWidget.cpp  SeerWatchpointsBrowserWidget.ui
Editor/: SeerCloseSourceDialog.ui  SeerEditorConfigPage.cpp  SeerEditorManagerWidget.cpp  SeerEditorManagerWidget.h  SeerEditorOptionsBarWidget.ui  SeerEditorWidget.cpp  SeerEditorWidget.h  SeerEditorWidget.ui  SeerEditorWidgetSourceArea.cpp  SeerTypeBrowserWidget.cpp  SeerTypeBrowserWidget.ui
GdbCtrl/: gdbconfigpage.cpp  gdbconfigpage.h  gdbconfigpage.ui  gdblogwidget.cpp  gdblogwidget.h  gdbmonitor.cpp  gdbmonitor.h  gdbwidget.cpp  gdbwidget.h  gdbwidget.ui
Stack/: SeerStackArgumentsBrowserWidget.cpp  SeerStackArgumentsBrowserWidget.ui  SeerStackFramesBrowserWidget.cpp  SeerStackFramesBrowserWidget.h  SeerStackFramesBrowserWidget.ui  SeerStackLocalsBrowserWidget.cpp  SeerStackLocalsBrowserWidget.ui  SeerStackManagerWidget.cpp  SeerStackManagerWidget.h  SeerStackManagerWidget.ui
Thread/: SeerThreadFramesBrowserWidget.cpp  SeerThreadFramesBrowserWidget.ui  SeerThreadIdsBrowserWidget.cpp  SeerThreadManagerWidget.cpp  SeerThreadManagerWidget.ui
Variable/: SeerRegisterValuesBrowserWidget.cpp  SeerVariableBrowserWidget.cpp  SeerVariableBrowserWidget.ui  SeerVariableLoggerBrowserWidget.cpp  SeerVariableLoggerBrowserWidget.ui  SeerVariableManagerWidget.cpp  SeerVariableManagerWidget.h  SeerVariableManagerWidget.ui  SeerVariableTrackerBrowserWidget.cpp  SeerVariableTrackerBrowserWidget.ui
cfgpage/: SeerConfigDialog.cpp  SeerConfigDialog.h  SeerEditorConfigPage.ui  SeerKeysConfigPage.cpp  SeerKeysConfigPage.h  SeerKeysConfigPage.ui  SeerSeerConfigPage.ui  SeerSourceConfigPage.cpp  SeerSourceConfigPage.ui
debug/: moc_LogWidget.cpp  moc_QDetachTabWidget.cpp  moc_QProcessInfoWidget.cpp  moc_QProgressIndicator.cpp  moc_Qcolorbutton.cpp  moc_SeerAboutDialog.cpp  moc_SeerArgumentsDialog.cpp  moc_SeerArrayVisualizerWidget.cpp  moc_SeerArrayWidget.cpp  moc_SeerBreakpointCreateDialog.cpp  moc_SeerBreakpointsBrowserWidget.cpp  moc_SeerBreakpointsOptionsBarWidget.cpp  moc_SeerCatchpointCreateDialog.cpp  moc_SeerCatchpointsBrowserWidget.cpp  moc_SeerCloseSourceDialog.cpp  moc_SeerConfigDialog.cpp  moc_SeerCppSourceHighlighter.cpp  moc_SeerDebugDialog.cpp  moc_SeerEditorConfigPage.cpp  moc_SeerEditorManagerWidget.cpp  moc_SeerEditorOptionsBarWidget.cpp  moc_SeerEditorWidget.cpp  moc_SeerFunctionBrowserWidget.cpp  moc_SeerKeysConfigPage.cpp  moc_SeerLibraryBrowserWidget.cpp  moc_SeerMemoryVisualizerWidget.cpp  moc_SeerRegisterValuesBrowserWidget.cpp  moc_SeerRunStatusIndicator.cpp  moc_SeerSeerConfigPage.cpp  moc_SeerSlashProcDialog.cpp  moc_SeerSourceBrowserWidget.cpp  moc_SeerSourceConfigPage.cpp  moc_SeerSourceLibraryManagerWidget.cpp  moc_SeerStackArgumentsBrowserWidget.cpp  moc_SeerStackFramesBrowserWidget.cpp  moc_SeerStackLocalsBrowserWidget.cpp  moc_SeerStackManagerWidget.cpp  moc_SeerThreadFramesBrowserWidget.cpp  moc_SeerThreadIdsBrowserWidget.cpp  moc_SeerThreadManagerWidget.cpp  (+19 more)
myQT/: QProcessInfo.cpp  QProcessInfoWidget.ui
resources/: style.qss
viz/: Makefile  arr.cpp  arr.h  arr.ui  double_link.cpp  double_link.h  double_link.ui  solo_link.cpp  solo_link.h  solo_link.ui  struct_view.cpp  struct_view.h  struct_view.ui  table.cpp  table.h  ui_arr.h  ui_double_link.h  ui_mainwindow.h  ui_solo_link.h  ui_struct_view.h  ui_window.h
(+6 files in other folders)
